; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dpx.c_read16.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dpx.c_read16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32)* @read16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read16(i32** %0, i32 %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32** %0, i32*** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load i32**, i32*** %3, align 8
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @AV_RB16(i32* %10)
  store i32 %11, i32* %5, align 4
  br label %16

12:                                               ; preds = %2
  %13 = load i32**, i32*** %3, align 8
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @AV_RL16(i32* %14)
  store i32 %15, i32* %5, align 4
  br label %16

16:                                               ; preds = %12, %8
  %17 = load i32**, i32*** %3, align 8
  %18 = load i32*, i32** %17, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 2
  store i32* %19, i32** %17, align 8
  %20 = load i32, i32* %5, align 4
  ret i32 %20
}

declare dso_local i32 @AV_RB16(i32*) #1

declare dso_local i32 @AV_RL16(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
